fix: apply default color and background for sheet elements (#13689)

--- a/packages/vuetify/src/components/VBadge/VBadge.sass
+++ b/packages/vuetify/src/components/VBadge/VBadge.sass
@@ -43,6 +43,8 @@
     padding: 0
     width: $badge-dot-width
 
+    @include theme($badge-theme...)
+
     &::after
       border-width: $badge-dot-border-width
 
