--- a/packages/vuetify/src/components/VBottomNavigation/VBottomNavigation.sass
+++ b/packages/vuetify/src/components/VBottomNavigation/VBottomNavigation.sass
@@ -9,6 +9,7 @@
 
   @include border($bottom-navigation-border...)
   @include rounded($bottom-navigation-border-radius)
+  @include theme($bottom-navigation-theme...)
 
   &--is-active
     @include elevation($bottom-navigation-elevation)
