--- a/packages/vuetify/src/components/VBottomNavigation/_variables.scss
+++ b/packages/vuetify/src/components/VBottomNavigation/_variables.scss
@@ -1,5 +1,6 @@
 // Defaults
-$bottom-navigation-background: var(--v-theme-surface) !default;
+$bottom-navigation-background: rgb(var(--v-theme-surface)) !default;
+$bottom-navigation-color: rgb(var(--v-theme-on-surface)) !default;
 $bottom-navigation-border-color: $border-color-root !default;
 $bottom-navigation-border-radius: map-get($rounded, '0') !default;
 $bottom-navigation-border-style: $border-style-root !default;
@@ -14,4 +15,9 @@ $bottom-navigation-border: (
   $bottom-navigation-border-style,
   $bottom-navigation-border-width,
   $bottom-navigation-border-thin-width
+) !default;
+
+$bottom-navigation-theme: (
+  $bottom-navigation-background,
+  $bottom-navigation-color
 ) !default;
