--- a/packages/vuetify/src/components/VFooter/VFooter.sass
+++ b/packages/vuetify/src/components/VFooter/VFooter.sass
@@ -12,6 +12,7 @@
   +elevation($footer-elevation)
   +position($footer-positions)
   +rounded($footer-border-radius)
+  @include theme($footer-theme...)
 
   &--rounded
     +rounded($footer-rounded-border-radius)
