--- a/packages/vuetify/src/components/VNavigationDrawer/_variables.scss
+++ b/packages/vuetify/src/components/VNavigationDrawer/_variables.scss
@@ -5,6 +5,7 @@ $navigation-drawer-border-radius: map-get($rounded, '0') !default;
 $navigation-drawer-border-style: $border-style-root !default;
 $navigation-drawer-border-thin-width: thin !default;
 $navigation-drawer-border-width: 0 !default;
+$navigation-drawer-color: rgb(var(--v-theme-on-surface)) !default;
 $navigation-drawer-content-height: 100% !default;
 $navigation-drawer-content-overflow-x: hidden !default;
 $navigation-drawer-content-overflow-y: auto !default;
@@ -26,4 +27,9 @@ $navigation-drawer-border: (
   $navigation-drawer-border-style,
   $navigation-drawer-border-width,
   $navigation-drawer-border-thin-width
+) !default;
+
+$navigation-drawer-theme: (
+  $navigation-drawer-background,
+  $navigation-drawer-color
 ) !default;
