--- a/packages/vuetify/src/components/VSheet/VSheet.sass
+++ b/packages/vuetify/src/components/VSheet/VSheet.sass
@@ -6,6 +6,7 @@
   @include elevation($sheet-elevation)
   @include position($sheet-positions)
   @include rounded($sheet-border-radius)
+  @include theme($sheet-theme...)
 
   &--rounded
     @include rounded($sheet-rounded-border-radius)
