--- a/packages/vuetify/src/components/VAppBar/VAppBar.sass
+++ b/packages/vuetify/src/components/VAppBar/VAppBar.sass
@@ -2,7 +2,6 @@
 
 .v-app-bar
   align-items: flex-start
-  background: rgb($app-bar-background)
   display: flex
   flex-direction: column
   justify-content: space-between
@@ -20,6 +19,7 @@
 
   @include border($app-bar-border...)
   @include rounded($app-bar-border-radius)
+  @include theme($app-bar-theme...)
 
   &--absolute
     position: absolute
