--- a/packages/vuetify/src/components/VAppBar/_variables.scss
+++ b/packages/vuetify/src/components/VAppBar/_variables.scss
@@ -1,4 +1,4 @@
-$app-bar-background: var(--v-theme-surface) !default;
+$app-bar-background: rgb(var(--v-theme-surface)) !default;
 $app-bar-border-color: $border-color-root !default;
 $app-bar-border-radius: map-get($rounded, '0') !default;
 $app-bar-border-style: $border-style-root !default;
@@ -6,6 +6,7 @@ $app-bar-border-thin-width: 0 0 thin !default;
 $app-bar-border-width: 0 !default;
 $app-bar-collapsed-border-radius: 24px !default;
 $app-bar-collapsed-max-width: 112px !default;
+$app-bar-color: rgb(var(--v-theme-on-surface)) !default;
 $app-bar-density-comfortable-padding: 4px !default;
 $app-bar-density-compact-padding: 0 !default;
 $app-bar-density-default-padding: 8px !default;
@@ -29,4 +30,9 @@ $app-bar-border: (
   $app-bar-border-style,
   $app-bar-border-width,
   $app-bar-border-thin-width
+) !default;
+
+$app-bar-theme: (
+  $app-bar-background,
+  $app-bar-color
 ) !default;
