--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -19,6 +19,7 @@
   @include border($navigation-drawer-border...)
   @include elevation($navigation-drawer-elevation)
   @include rounded($navigation-drawer-border-radius)
+  @include theme($navigation-drawer-theme...)
 
   &--absolute
     position: absolute
