--- a/packages/vuetify/src/components/VSheet/_variables.scss
+++ b/packages/vuetify/src/components/VSheet/_variables.scss
@@ -1,4 +1,6 @@
 // Defaults
+$sheet-background: rgb(var(--v-theme-surface)) !default;
+$sheet-color: rgb(var(--v-theme-on-surface)) !default;
 $sheet-border-color: $border-color-root !default;
 $sheet-border-radius: 0 !default;
 $sheet-border-style: $border-style-root !default;
@@ -13,4 +15,9 @@ $sheet-border: (
   $sheet-border-style,
   $sheet-border-width,
   $sheet-border-thin-width
+) !default;
+
+$sheet-theme: (
+  $sheet-background,
+  $sheet-color
 ) !default;
