--- a/packages/vuetify/src/components/VTimeline/_mixins.sass
+++ b/packages/vuetify/src/components/VTimeline/_mixins.sass
@@ -1,42 +1,28 @@
-@mixin timeline-dots($dot-size, $inner-dot-size)
-  height: $dot-size
-  left: calc(50% - #{$dot-size / 2})
-  width: $dot-size
-
-  .v-timeline-item__inner-dot
-    height: $inner-dot-size
-    margin: ($dot-size - $inner-dot-size) / 2
-    width: $inner-dot-size
-
-@mixin timeline-wedge-align($direction)
-  .v-timeline-item__body
-    > .v-card:before, .v-card:after
-      +ltr()
-        transform: rotate(if($direction == right, 180deg, 0))
-        #{$direction}: -($timeline-wedge-size)
-        #{if($direction == left, right, left)}: initial
-
-      +rtl()
-        transform: rotate(if($direction == right, 0, 180deg))
-        #{$direction}: initial
-        #{if($direction == left, right, left)}: -($timeline-wedge-size)
-
 @mixin timeline-item-align($direction)
-  flex-direction: if($direction == left, row-reverse, row)
+  .v-timeline-item__wrapper
+    flex-direction: if($direction == left, row-reverse, if($direction == right, row, if($direction == top, column-reverse, column)))
 
-  .v-timeline-item__opposite
-    +ltr()
-      text-align: if($direction == left, right, left)
+    .v-timeline-item__body
+      #{if($direction == right or $direction == left, justify-content, align-items)}: if($direction == left or $direction == top, flex-start, flex-end)
+      #{if($direction == top or $direction == bottom, max-height, max-width)}: calc(#{if($direction == top or $direction == left, '100% - ', '')}var(--v-timeline-line-position) - #{$timeline-divider-width / 2})
 
-    +rtl()
-      text-align: if($direction == left, left, right)
+    .v-timeline-item__opposite
+      #{if($direction == top or $direction == bottom, align-items, justify-content)}: #{if($direction == top or $direction == left, flex-end, flex-start)}
 
 @mixin timeline-line-align($center, $first, $second)
   &:before
     +ltr()
-      #{$first}: calc(#{$center} - #{$timeline-line-width / 2})
+      #{$first}: calc(#{$center} - #{var(--v-timeline-line-width) / 2})
       #{$second}: initial
 
     +rtl()
       #{$first}: initial
-      #{$second}: calc(#{$center} - #{$timeline-line-width / 2})
+      #{$second}: calc(#{$center} - #{var(--v-timeline-line-width) / 2})
+
+@mixin vertical($immediate: false)
+  @at-root .v-timeline--vertical#{if($immediate, &, ' &')}
+    @content
+
+@mixin horizontal($immediate: false)
+  @at-root .v-timeline--horizontal#{if($immediate, &, ' &')}
+    @content
