feat(VRating): port to v3 (#13410)
fixes #12629
Co-authored-by: John Leider <john.j.leider@gmail.com>
Co-authored-by: Kael <kaelwd@gmail.com>
Co-authored-by: Jacek Karczmarczyk <jk@drukcd.pl>

--- a/packages/vuetify/src/components/VRating/_variables.scss
+++ b/packages/vuetify/src/components/VRating/_variables.scss
@@ -1,5 +1,8 @@
-@import '../../styles/styles.sass';
-
-$rating-padding: 0.5rem !default;
-$rating-border-radius: 50% !default;
-$rating-dense-padding: 0.1rem !default;
+// Defaults
+$rating-item-focused-button-overlay-opacity: var(--v-hover-opacity) !default;
+$rating-item-align-items: center !default;
+$rating-item-button-opacity: 1 !default;
+$rating-item-button-transition-property: transform !default;
+$rating-item-icon-transform: scale(1.25) !default;
+$rating-item-transition-timing-function: $decelerated-easing !default;
+$rating-white-space: nowrap !default;
