--- a/packages/vuetify/src/components/VRating/VRating.sass
+++ b/packages/vuetify/src/components/VRating/VRating.sass
@@ -1,28 +1,59 @@
-@import './_variables.scss'
+@import ./index
 
 .v-rating
   max-width: 100%
-  white-space: nowrap
-
-  .v-icon
-    padding: $rating-padding
-    border-radius: $rating-border-radius
-    user-select: none
-    outline: none
-
-    &::after
-      display: none
-
-    +ltr()
-      transform: scaleX(1)
-
-    +rtl()
-      transform: scaleX(-1)
+  display: inline-flex
+  white-space: $rating-white-space
 
   &--readonly
-    .v-icon
-      pointer-events: none
+    pointer-events: none
 
-  &--dense
+.v-rating__wrapper
+  align-items: $rating-item-align-items
+  display: inline-flex
+  flex-direction: column
+
+  &--bottom
+    flex-direction: column-reverse
+
+.v-rating__item
+  display: inline-flex
+  position: relative
+
+  label
+    cursor: pointer
+
+  .v-btn--variant-plain
+    opacity: $rating-item-button-opacity
+
+  .v-btn
+    transition-property: $rating-item-button-transition-property
+
     .v-icon
-      padding: $rating-dense-padding
+      transition: inherit
+      transition-timing-function: $rating-item-transition-timing-function
+
+  &:hover:not(.v-rating__item--focused)
+    .v-icon
+      transform: $rating-item-icon-transform
+
+  &--focused
+    .v-btn__overlay
+      display: block
+      opacity: $rating-item-focused-button-overlay-opacity
+
+  &--half
+    overflow: hidden
+    position: absolute
+    width: 50%
+    z-index: 1
+
+    .v-btn__overlay,
+    &:hover .v-btn__overlay
+      opacity: 0
+
+.v-rating__hidden
+  height: 0
+  opacity: 0
+  position: absolute
+  width: 0
