--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -187,3 +187,11 @@
   + .v-card-media
     border-top-left-radius: inherit
     border-top-right-radius: inherit
+
+// VDialog
+.v-card
+  .v-dialog .v-overlay__content > &
+    border-radius: inherit
+    overflow: hidden
+
+    @include elevation($card-dialog-elevation)
