--- a/packages/vuetify/src/components/VDialog/_variables.scss
+++ b/packages/vuetify/src/components/VDialog/_variables.scss
@@ -1,13 +1,13 @@
 // Defaults
-$dialog-border-radius: $border-radius-root !default;
-$dialog-card-actions-padding: 8px 16px !default;
-$dialog-card-subtitle-padding: 0 24px 20px !default;
-$dialog-card-text-padding: 0 24px 20px !default;
-$dialog-card-title-font-size: map-deep-get($typography, 'h6', 'size') !default;
-$dialog-card-title-font-weight: map-deep-get($typography, 'h6', 'weight') !default;
-$dialog-card-title-letter-spacing: map-deep-get($typography, 'h6', 'letter-spacing') !default;
-$dialog-card-title-padding: 16px 24px 10px !default;
-$dialog-elevation: 24 !default;
-$dialog-margin: 24px !default;
-$dialog-max-height: 90% !default;
 $dialog-z-index: 2400 !default;
+$dialog-card-avatar-padding: 0 !default;
+$dialog-card-header-padding: 14px 24px 0 !default;
+$dialog-card-header-text-padding-top: 10px !default;
+$dialog-card-text-padding: 16px 24px 10px !default;
+$dialog-card-text-letter-spacing: map-deep-get($typography, 'body-1', 'letter-spacing') !default;
+$dialog-overlay-content-border-radius: $border-radius-root !default;
+$dialog-overlay-content-max-width: 560px !default;
+$dialog-overlay-content-max-height: 360px !default;
+$dialog-overlay-content-min-width: 240px !default;
+$dialog-overlay-content-mobile-breakpoint: map-get($display-breakpoints, 'sm-and-down') !default;
+$dialog-overlay-content-mobile-max-width: 280px !default;
