--- a/packages/vuetify/src/components/VSheet/VSheet.sass
+++ b/packages/vuetify/src/components/VSheet/VSheet.sass
@@ -10,3 +10,11 @@
 
   &--rounded
     @include rounded($sheet-rounded-border-radius)
+
+// VDialog
+.v-sheet
+  .v-dialog .v-overlay__content > &
+    border-radius: inherit
+    overflow: hidden
+
+    @include elevation($sheet-dialog-elevation)
