--- a/packages/vuetify/src/components/VProgressCircular/VProgressCircular.sass
+++ b/packages/vuetify/src/components/VProgressCircular/VProgressCircular.sass
@@ -1,11 +1,13 @@
-@import './_variables.scss'
+// Imports
+@import ./index
 
+// Elements
 .v-progress-circular
-  position: relative
-  display: inline-flex
-  vertical-align: middle
-  justify-content: center
   align-items: center
+  display: inline-flex
+  justify-content: center
+  position: relative
+  vertical-align: middle
 
   > svg
     width: 100%
@@ -18,36 +20,53 @@
     right: 0
     z-index: 0
 
-  &--indeterminate
-    > svg
-      animation: $progress-circular-rotate-animation
-      transform-origin: center center
-      transition: $process-circular-intermediate-svg-transition
+.v-progress-circular__content
+  align-items: center
+  display: flex
+  justify-content: center
 
-    .v-progress-circular__overlay
-      animation: $progress-circular-rotate-dash
-      stroke-linecap: round
-      stroke-dasharray: 80, 200
-      stroke-dashoffset: 0px
+.v-progress-circular__underlay
+  color: $progress-circular-underlay-color
+  stroke: currentColor
+  z-index: 1
 
-  &--indeterminate:not(&--visible)
-    > svg,
-    .v-progress-circular__overlay
-      animation-play-state: paused !important
+.v-progress-circular__overlay
+  stroke: currentColor
+  transition: $progress-circular-overlay-transition
+  z-index: 2
 
-  &__info
-    align-items: center
-    display: flex
-    justify-content: center
+// Modifiers
+.v-progress-circular
+  @each $name, $multiplier in $progress-circular-sizes
+    $size: $progress-circular-size + ($size-scale * $multiplier)
 
-  &__underlay
-    stroke: $progress-circular-underlay-stroke
-    z-index: 1
+    &--size-#{$name}
+      height: $size
+      width: $size
 
-  &__overlay
-    stroke: currentColor
-    z-index: 2
-    transition: $progress-circular-overlay-transition
+.v-progress-circular--indeterminate
+  > svg
+    animation: $progress-circular-rotate-animation
+    transform-origin: center center
+    transition: $progress-circular-intermediate-svg-transition
+
+  .v-progress-circular__overlay
+    animation: $progress-circular-rotate-dash
+    stroke-dasharray: 25, 200
+    stroke-dashoffset: 0
+    stroke-linecap: round
+
+.v-progress-circular--disable-shrink
+  > svg
+    animation-duration: nth($progress-circular-rotate-animation, 2) / 2
+
+  .v-progress-circular__overlay
+    animation: none
+
+.v-progress-circular--indeterminate:not(.v-progress-circular--visible)
+  > svg,
+  .v-progress-circular__overlay
+    animation-play-state: paused !important
 
 @keyframes progress-circular-dash
   0%
@@ -60,8 +79,8 @@
 
   100%
     stroke-dasharray: 100, 200
-    stroke-dashoffset: -125px
+    stroke-dashoffset: -124px
 
 @keyframes progress-circular-rotate
   100%
-    transform: rotate(360deg)
+    transform: rotate(270deg)
