feat(VPagination): update to v3 (#13600)
resolves #4201
fixes #11242
resolves #8759 (use slot)
fixes #12395
resolves #2070
resolves #5028
fixes #8146
resolves #2541
fixes #11662
fixes #12232
resolves #10085

Co-authored-by: John Leider <john.j.leider@gmail.com>
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -167,3 +167,19 @@
     padding: $button-banner-actions-padding
 
     @include elevation($button-banner-actions-elevation)
+
+// VPagination
+.v-btn
+  @include elevation($button-pagination-elevation)
+  @include rounded($button-pagination-border-radius)
+
+  .v-pagination &
+    @include button-density('height' 'width', $button-pagination-density)
+
+  &--elevated
+    .v-pagination__list &
+      @include elevation($button-pagination-elevation)
+
+  &__overlay
+    .v-pagination__item--is-active &
+      opacity: $button-pagination-active-overlay-opacity
