--- a/packages/vuetify/src/components/VBtn/_variables.scss
+++ b/packages/vuetify/src/components/VBtn/_variables.scss
@@ -21,6 +21,9 @@ $button-bottom-navigation-shift-top: 50% !default;
 $button-bottom-navigation-shift-transform: scale(.8) translateY(10px) !default;
 $button-bottom-navigation-text-transform: none !default;
 $button-bottom-navigation-transition-duration: .2s !default;
+$button-pagination-active-overlay-opacity: var(--v-border-opacity) !default;
+$button-pagination-border-radius: $border-radius-root !default;
+$button-pagination-elevation: 0 !default;
 $button-border-color: $border-color-root !default;
 $button-border-radius: $border-radius-root !default;
 $button-border-style: $border-style-root !default;
@@ -54,6 +57,7 @@ $button-stacked-width-ratio: 1 !default;
 $button-density: ('default': 0, 'comfortable': -2, 'compact': -3) !default;
 $button-stacked-density: ('default': 0, 'comfortable': -4, 'compact': -6) !default;
 $button-icon-density: ('default': 3, 'comfortable': 0, 'compact': -2) !default;
+$button-pagination-density: ('default': 0, 'comfortable': -1, 'compact': -2) !default;
 
 $button-border: (
   $button-border-color,
