--- a/packages/vuetify/src/components/VBreadcrumbs/VBreadcrumbs.sass
+++ b/packages/vuetify/src/components/VBreadcrumbs/VBreadcrumbs.sass
@@ -1,45 +1,39 @@
-@import './_variables'
+@import ./index
 
-// Theme
-+theme(v-breadcrumbs) using ($material)
-  .v-breadcrumbs__divider, .v-breadcrumbs__item--disabled
-    color: map-deep-get($material, 'text', 'disabled')
-
-// Block
 .v-breadcrumbs
-  align-items: center
-  display: flex
-  flex-wrap: wrap
-  flex: $breadcrumbs-flex
-  list-style-type: none
-  margin: $breadcrumbs-margin
+  line-height: $breadcrumbs-line-height
   padding: $breadcrumbs-padding
 
-  li
-    align-items: center
-    display: inline-flex
-    font-size: $breadcrumbs-item-font-size
+  &--rounded
+    @include rounded($breadcrumbs-rounded-border-radius)
 
-    .v-icon
-      font-size: $breadcrumbs-item-large-font-size
+  @at-root
+    @include density('v-breadcrumbs', $breadcrumbs-density) using ($modifier)
+      padding-top: $breadcrumbs-padding + $modifier
+      padding-bottom: $breadcrumbs-padding + $modifier
 
-    &:nth-child(even)
-      padding: $breadcrumbs-even-child-padding
 
-// Element
-.v-breadcrumbs__item
+.v-breadcrumbs-item
   align-items: center
+  color: inherit
   display: inline-flex
+  padding: $breadcrumbs-item-padding
   text-decoration: none
-  transition: $primary-transition
+  vertical-align: $breadcrumbs-vertical-align
 
   &--disabled
+    opacity: $breadcrumbs-item-disabled-opacity
     pointer-events: none
 
-// Modifier
-.v-breadcrumbs--large
-  li
-    font-size: $breadcrumbs-item-large-font-size
+  &--link:hover
+    text-decoration: $breadcrumbs-item-link-text-decoration
 
-    .v-icon
-      font-size: $breadcrumbs-item-large-font-size
+  .v-icon
+    font-size: $breadcrumbs-item-icon-font-size
+    margin-inline-start: $breadcrumbs-item-icon-margin-inline-start
+    margin-inline-end: $breadcrumbs-item-icon-margin-inline-end
+
+.v-breadcrumbs-divider
+  display: inline-block
+  padding: $breadcrumbs-divider-padding
+  vertical-align: $breadcrumbs-vertical-align
