--- a/packages/vuetify/src/styles/tools/_variant.sass
+++ b/packages/vuetify/src/styles/tools/_variant.sass
@@ -3,6 +3,7 @@
   &--variant-outlined,
   &--variant-text,
   &--variant-contained-text
+    background: transparent
     color: inherit
 
   &--variant-plain
