--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -1,190 +1,141 @@
 // Imports
-@import './_variables.scss'
+@import ./index
 
-// Theme
-+theme(v-alert) using ($material)
-  .v-alert--prominent .v-alert__icon
-    &:after
-      background: map-get($material, 'dividers')
-
-// Sheet
-+sheet(v-alert, $alert-elevation, $alert-border-radius, $alert-shaped-border-radius)
-
-// Block
 .v-alert
-  display: block
-  font-size: $alert-font-size
-  margin-bottom: $alert-margin
   padding: $alert-padding
   position: relative
-  transition: $primary-transition
 
-  &:not(.v-sheet--tile)
-    border-radius: $alert-border-radius
+  @include elevation($alert-elevation)
+  @include position($alert-positions)
+  @include rounded($alert-border-radius)
+  @include theme($alert-theme...)
+  @include variant($alert-variants...)
 
-  > .v-icon,
-  > .v-alert__content
-    +ltr()
-      margin-right: $alert-margin
+  // has specificity issues without this selector
+  &.v-alert--border
+    --v-border-opacity: #{$alert-border-opacity}
 
-    +rtl()
-      margin-left: $alert-margin
+  &--border
+    padding-inline-start: $alert-border-padding-inline-start
 
-  > .v-icon + .v-alert__content
-    +ltr()
-      margin-right: 0
+  &:not(.v-alert--prominent)
+    .v-avatar
+      --v-avatar-height: #{$alert-avatar-height}
 
-    +rtl()
-      margin-left: 0
+  &--variant-plain
+    transition: $alert-plain-transition
 
-  > .v-alert__content + .v-icon
-    +ltr()
-      margin-right: 0
+  @at-root
+    @include density('v-alert', $alert-density) using ($modifier)
+      padding-top: $alert-padding + $modifier
+      padding-bottom: $alert-padding + $modifier
 
-    +rtl()
-      margin-left: 0
+      &.v-alert--prominent
+        .v-alert__avatar
+          margin-inline-start: $alert-prominent-avatar-margin-inline-start + $modifier / 2
+          margin-inline-end: $alert-prominent-avatar-margin-inline-end + $modifier / 2
 
-// Elements
+          .v-icon
+            font-size: $alert-prominent-icon-font-size + ($modifier * $alert-icon-font-size-multiplier)
+
+.v-alert__avatar
+  align-self: flex-start
+  display: flex
+  position: relative
+  margin-inline-start: $alert-avatar-margin-inline-start
+  margin-inline-end: $alert-avatar-margin-inline-end
+
+  .v-icon
+    font-size: $alert-avatar-icon-font-size
+    height: $alert-avatar-icon-font-size
+    width: $alert-avatar-icon-font-size
+
+  .v-alert--prominent &
+    align-self: center
+    flex: 1 0 auto
+    max-width: $alert-prominent-icon-size
+
+  .v-alert--tip &
+    margin-inline-start: $alert-tip-margin-inline-start
+    max-height: $alert-tip-max-height
+    max-width: $alert-tip-max-width
+
+    &::before
+      content: ''
+      top: 4px
+      left: 4px
+      position: absolute
+      width: 16px
+      height: 16px
+      background: white
+      border-radius: inherit
+
+    .v-avatar
+      height: auto
+      max-width: inherit
+      max-height: inherit
+
 .v-alert__border
-  border-style: solid
-  border-width: $alert-border-width
-  content: ''
+  border-radius: inherit
+  bottom: 0
+  left: 0
+  opacity: var(--v-border-opacity)
   position: absolute
+  right: 0
+  top: 0
+  width: 100%
 
-  &:not(.v-alert__border--has-color)
-    opacity: $alert-border-opacity
+  @include border($alert-border...)
 
-  &--left,
-  &--right
-    bottom: 0
-    top: 0
+  .v-alert--border-start &
+    border-inline-start-width: $alert-border-thin-width
+    border-inline-end-width: 0
 
-  &--bottom,
-  &--top
-    left: 0
-    right: 0
+  .v-alert--border-top &
+    border-top-width: $alert-border-thin-width
+    border-bottom-width: 0
 
-  &--bottom
-    border-bottom-left-radius: inherit
-    border-bottom-right-radius: inherit
-    bottom: 0
+  .v-alert--border-bottom &
+    border-bottom-width: $alert-border-thin-width
+    border-top-width: 0
 
-  &--left
-    +ltr()
-      border-top-left-radius: inherit
-      border-bottom-left-radius: inherit
-      left: 0
+  .v-alert--border-end &
+    border-inline-end-width: $alert-border-thin-width
+    border-inline-start-width: 0
 
-    +rtl()
-      border-top-right-radius: inherit
-      border-bottom-right-radius: inherit
-      right: 0
+  .v-alert--border.v-alert--tip &
+    --v-border-opacity: 1
+    border-inline-start-width: $alert-tip-border-inline-start-width
 
-  &--right
-    +ltr()
-      border-top-right-radius: inherit
-      border-bottom-right-radius: inherit
-      right: 0
+.v-alert__close
+  align-self: flex-start
+  display: flex
+  flex: 0 1 auto
+  margin-inline-start: $alert-close-margin-inline-start
+  padding-inline-start: $alert-close-padding-inline-start
 
-    +rtl()
-      border-top-left-radius: inherit
-      border-bottom-left-radius: inherit
-      left: 0
+  .v-btn
+    height: inherit
+    width: inherit
 
-  &--top
-    border-top-left-radius: inherit
-    border-top-right-radius: inherit
-    top: 0
+  .v-icon
+    font-size: $alert-close-icon-font-size
 
 .v-alert__content
-  flex: 1 1 auto
-
-.v-alert__dismissible
-  +ltr()
-    margin: -16px -8px -16px 8px
-
-  +rtl()
-    margin: -16px 8px -16px -8px
-
-.v-alert__icon
-  align-self: flex-start
-  border-radius: 50%
-  height: $alert-icon-size
-  min-width: $alert-icon-size
-  position: relative
-
-  +ltr()
-    margin-right: 16px
-
-  +rtl()
-    margin-left: 16px
-
-  &.v-icon
-    font-size: $alert-icon-size
-
-.v-alert__wrapper
-  align-items: center
-  border-radius: inherit
   display: flex
 
-// Modifiers
-.v-alert--border
-  &.v-alert--prominent
-    .v-alert__icon
-      +ltr()
-        margin-left: $alert-border-icon-margin
+  .v-alert--prominent &
+    align-items: center
 
-      +rtl()
-        margin-right: $alert-border-icon-margin
+.v-alert-text
+  padding: $alert-text-padding
 
-.v-alert--dense
-  padding-top: $alert-padding / 2
-  padding-bottom: $alert-padding / 2
+  .v-alert--border-start &
+    padding-inline-end: #{$alert-text-padding + $alert-border-thin-width}
 
-  .v-alert__border
-    border-width: $alert-dense-border-width
+  .v-alert--border-end &
+    padding-inline-start: #{$alert-text-padding + $alert-border-thin-width}
 
-.v-alert--outlined
-  background: transparent !important
-  border: $alert-outline !important
-
-  .v-alert__icon
-    color: inherit !important
-
-.v-alert--prominent
-  .v-alert__icon
-    align-self: center
-    height: $alert-prominent-icon-size
-    min-width: $alert-prominent-icon-size
-
-    &.v-icon
-      font-size: $alert-prominent-icon-font-size
-
-      &:after
-        background: currentColor !important
-        border-radius: 50%
-        bottom: 0
-        content: ''
-        left: 0
-        opacity: 0.16
-        position: absolute
-        right: 0
-        top: 0
-
-  &.v-alert--dense .v-alert__icon.v-icon::after
-    transform: scale(1)
-
-.v-alert--text
-  background: transparent !important
-
-  &:before
-    background-color: currentColor
-    border-radius: inherit
-    bottom: 0
-    content: ''
-    left: 0
-    opacity: 0.12
-    position: absolute
-    pointer-events: none
-    right: 0
-    top: 0
+.v-alert__text
+  display: flex
+  flex: 1 1
