feat(VChip): port to v3 (#13192)
Co-authored-by: John Leider <john.j.leider@gmail.com>
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VAvatar/VAvatar.sass
+++ b/packages/vuetify/src/components/VAvatar/VAvatar.sass
@@ -18,6 +18,10 @@
   > *
     border-radius: inherit
     width: inherit
+    height: inherit
+
+  > .v-icon
+    font-size: var(--v-avatar-height)
 
   &--rounded
     +rounded($avatar-rounded-border-radius)
