--- a/packages/vuetify/src/styles/tools/_functions.sass
+++ b/packages/vuetify/src/styles/tools/_functions.sass
@@ -72,3 +72,6 @@
 @function theme-color($color, $opacity: 1)
   $color: rgba(var(--v-theme-#{$color}), $opacity)
   @return $color
+
+@function roundEven($val)
+  @return 2 * round($val / 2)
