fix(VTextField): remove border width transition
fixes #12248

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -403,8 +403,8 @@
       position: absolute
       right: 0
       top: $text-field-outlined-fieldset-top
-      transition-duration: 0.3s
-      transition-property: color, border-width
+      transition-duration: 0.15s
+      transition-property: color
       transition-timing-function: map-get($transition, 'fast-in-fast-out')
 
       +ltr()
